--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="profile">
-            <img src="profile.jpg" alt="Your Profile Picture">
+            <img src="profile.jpg" alt="My Profile Picture">
             <h1>Mar Thayne Lowell Nacionales</h1>
         </div>
         <nav>
