--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="profile">
-            <img src="profile.jpg" alt="My Profile Picture">
+            <img src="/images/profile.jpg" alt="My Profile Picture">
             <h1>Mar Thayne Lowell Nacionales</h1>
         </div>
         <nav>
@@ -43,8 +43,8 @@
         </section>
         
         <section class="location">
-            <h2>Your Place Here</h2>
-            <img src="El Nido.jpg" alt="Beach">
+            <h2>El Nido Island's</h2>
+            <img src="/images/island.jpg" alt="Island">
             <p>Beach</p>
         </section>
         
