--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="profile">
-            <img src="/images/profile.jpg" alt="My Profile Picture">
+            <img src="/images/me.jpg" alt="My Profile Picture">
             <h1>Mar Thayne Lowell Nacionales</h1>
         </div>
         <nav>
@@ -44,7 +44,7 @@
         
         <section class="location">
             <h2>El Nido Island's</h2>
-            <img src="/images/island.jpg" alt="Island">
+            <img src="/images/beach.jpg" alt="Island">
             <p>Beach</p>
         </section>
         
@@ -56,7 +56,6 @@
                 <button onclick="filterCourses('WDD')">WDD</button>
             </div>
             <div id="course-list" class="course-list">
-                <!-- Courses will be dynamically inserted here -->
             </div>
         </section>
     </main>
