--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Gruppo&family=Jura:wght@300..700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/mobile.css" media="screen and (max-width: 768px)">
     <script src="scripts/main.js" defer></script>
 </head>
 
@@ -54,13 +53,15 @@
                 <button onclick="filterCourses('CSE')">CSE</button>
                 <button onclick="filterCourses('WDD')">WDD</button>
             </div>
-            <div id="course-list" class="course-list">
-            </div>
+            <div id="course-list" class="course-list"></div> <!-- Ensure this exists -->
+            <div id="total-credits">Total Credits: 0</div> <!-- Ensure this exists -->
         </section>
     </main>
+
     <footer>
-        <p>&copy; <span id="currentyear"></span> Mar Thayne Lowell Nacionales Philippines</p>
-        <p id="lastModified"></p>
+        <p>&copy; <span id="currentyear"></span> Mar Thayne Lowell Nacionales, Philippines</p>
+        <p id="lastModified"></p> <!-- Ensure this exists -->
     </footer>
-    </body>
-    </html>
+</body>
+
+</html>
