--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,10 +12,11 @@
     <meta property="og:title" content="Metro Manila Chamber of Commerce - Business Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/hero.jpg">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:url" content="https://thayl0w.github.io/chamber/">
+
     
     <link rel="stylesheet" href="/chamber/styles/reset.css">
-    <link rel="stylesheet" href="/chamber/styles/styling.css">
+    <link rel="stylesheet" href="/chamber/styles/styling.css">    
     <script src="/chamber/scripts/chamber.js"></script>
 </head>
 <body>
