--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Metro Manila Chamber of Commerce - Business Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/hero.jpg">
-    <meta property="og:url" content="https://thayl0w.github.io/wdd231/">
+    <meta property="og:url" content="	https://thayl0w.github.io/wdd231/chamber/directory.html">
 
 
     
