--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,8 +16,8 @@
 
 
     
-    <link rel="stylesheet" href="/chamber/styles/reset.css">
-    <link rel="stylesheet" href="/chamber/styles/styling.css">    
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/styling.css">    
     <script src="/chamber/scripts/chamber.js"></script>
 </head>
 <body>
