--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,7 +18,7 @@
     
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styling.css">    
-    <script src="/chamber/scripts/chamber.js"></script>
+    <script src="scripts/chamber.js"></script>
 </head>
 <body>
 
