--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,10 +14,7 @@
     <meta property="og:image" content="images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/directory.html">
 
-
-    
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/styling.css">    
+    <link rel="stylesheet" href="styles/reset.css">   
     <script src="scripts/chamber.js"></script>
 </head>
 <body>
@@ -25,7 +22,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="Chamber Logo">
+            <img src="" alt="Chamber Logo">
             <h1>Metro Manila Chamber of Commerce</h1>
         </div>
         <nav>
@@ -41,7 +38,7 @@
 
     <!-- HERO SECTION -->
     <section class="hero">
-        <img src="images/hero.jpg" alt="Scalable Responsive Hero Image">
+        <img src="images/imageslogo.jpg" alt="Scalable Responsive Hero Image">
         <button class="hero-btn">Tickets</button>
     </section>
 
@@ -85,8 +82,8 @@
     <footer>
         <div class="footer-info">
             <p>Metro Manila Chamber of Commerce</p>
-            <p>10 Rue De La Paix, Metro Manila, Philippines 999</p>
-            <p>Email: info@mmcc.org | Phone: (223) 555-2300</p>
+            <p>326 Dela Paz, Pasig City, Philippines 2600</p>
+            <p>Email: MMchamber.org | Phone: (63)912345678 </p>
         </div>
         <div class="social-icons">
             <img src="images/youtube.png" alt="YouTube">
