--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,7 +22,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo">
-            <img src="" alt="Chamber Logo">
+            <img src="images/logo.png" alt="Chamber Logo">
             <h1>Metro Manila Chamber of Commerce</h1>
         </div>
         <nav>
@@ -32,13 +32,12 @@
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
-            <button id="toggleTheme">🌙</button>
         </nav>
     </header>
 
     <!-- HERO SECTION -->
     <section class="hero">
-        <img src="images/imageslogo.jpg" alt="Scalable Responsive Hero Image">
+        <img src="images/hero.jpg" alt="Scalable Responsive Hero Image">
         <button class="hero-btn">Tickets</button>
     </section>
 
@@ -56,25 +55,22 @@
             <!-- WEATHER -->
             <section class="weather">
                 <h3>Current Weather</h3>
-                <p>🌤 75°F - Partly Cloudy</p>
-                <p>High: 85°F | Low: 52°F</p>
-                <p>Humidity: 34%</p>
+                <p id="currentWeather">Loading...</p>
+                <p id="weatherDetails">High: --°C | Low: --°C</p>
+                <p id="humidity">Humidity: --%</p>
             </section>
 
             <!-- FORECAST -->
-            <section class="forecast">
+            <section class="forecast" id="forecast">
                 <h3>Weather Forecast</h3>
-                <p>Today: 90°F</p>
-                <p>Wednesday: 89°F</p>
-                <p>Thursday: 68°F</p>
+                <p>Loading forecast...</p>
             </section>
         </div>
 
         <!-- BUSINESS DIRECTORY -->
         <section class="directory">
             <h2>Business Directory</h2>
-            <button id="toggleView">Toggle Grid/List</button>
-            <div id="members" class="grid-view"></div>
+            <div id="members" class="card-flip-view"></div>
         </section>
     </main>
 
@@ -83,7 +79,7 @@
         <div class="footer-info">
             <p>Metro Manila Chamber of Commerce</p>
             <p>326 Dela Paz, Pasig City, Philippines 2600</p>
-            <p>Email: MMchamber.org | Phone: (63)912345678 </p>
+            <p>Email: MMchamber.org | Phone: (+63) 912345678 </p>
         </div>
         <div class="social-icons">
             <img src="images/youtube.png" alt="YouTube">
@@ -93,6 +89,6 @@
         <p>&copy; <span id="year"></span> | Last Updated: <span id="lastModified"></span></p>
     </footer>
 
-    <script src="script.js"></script>
+ 
 </body>
 </html>
