--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,16 +6,17 @@
     <meta name="description" content="Metro Manila Chamber of Commerce connects businesses with opportunities, resources, and community engagement.">
     <meta name="author" content="Mar Thayne Lowell Nacionales">
     
-    <title>Metro Manila Chamber of Commerce - Business Directory</title>
+    <title>Chamber of Commerce - Business Directory</title>
     
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Metro Manila Chamber of Commerce - Business Directory">
+    <meta property="og:title" content="Chamber of Commerce - Business Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/directory.html">
 
     <link rel="stylesheet" href="styles/reset.css">   
-    <script src="scripts/chamber.js"></script>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="scripts/chamber.js" defer></script>
 </head>
 <body>
 
@@ -23,7 +24,7 @@
     <header>
         <div class="logo">
             <img src="images/logo.png" alt="Chamber Logo">
-            <h1>Metro Manila Chamber of Commerce</h1>
+            <h1>Chamber of Commerce - Business Directory </h1>
         </div>
         <nav>
             <ul>
@@ -36,8 +37,8 @@
     </header>
 
     <!-- HERO SECTION -->
-    <section class="hero">
-        <img src="images/hero.jpg" alt="Scalable Responsive Hero Image">
+    <section class="hero-container">
+       <div class="hero image"> <img src="images/hero.jpg" alt="Scalable Responsive Hero Image"></div>
         <button class="hero-btn">Tickets</button>
     </section>
 
@@ -55,7 +56,7 @@
             <!-- WEATHER -->
             <section class="weather">
                 <h3>Current Weather</h3>
-                <p id="currentWeather">Loading...</p>
+                <p id="currentWeather">Weather data unavailable</p>
                 <p id="weatherDetails">High: --°C | Low: --°C</p>
                 <p id="humidity">Humidity: --%</p>
             </section>
@@ -63,12 +64,12 @@
             <!-- FORECAST -->
             <section class="forecast" id="forecast">
                 <h3>Weather Forecast</h3>
-                <p>Loading forecast...</p>
+                <p>Forecast data unavailable.</p>
             </section>
         </div>
 
         <!-- BUSINESS DIRECTORY -->
-        <section class="directory">
+        <section class="directory" >
             <h2>Business Directory</h2>
             <div id="members" class="card-flip-view"></div>
         </section>
@@ -88,7 +89,6 @@
         </div>
         <p>&copy; <span id="year"></span> | Last Updated: <span id="lastModified"></span></p>
     </footer>
-
  
 </body>
 </html>
