--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Chamber of Commerce - Business Directory">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/hero.jpg">
+    <meta property="og:image" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/directory.html">
     <link rel="stylesheet" href="styles/reset.css">
     <script src="scripts/chamber.js" defer></script>
@@ -44,7 +44,7 @@
             <!-- EVENTS -->
             <section class="events">
                 <h3>Events</h3>
-                <p>Upcoming events happening in the community.</p>
+                <p>Upcoming events happening .</p>
             </section>
 
             <!-- WEATHER -->
