--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Metro Manila Chamber of Commerce connects businesses with opportunities, resources, and community engagement.">
     <meta name="author" content="Mar Thayne Lowell Nacionales">
-    <title>Chamber of Commerce - Business Directory</title>
+    <title>Manila Chamber of Commerce</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Chamber of Commerce - Business Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/directory.html">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Inconsolata:wght@200..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <script src="scripts/chamber.js" defer></script>
 </head>
@@ -18,7 +21,7 @@
     <header>
         <div class="logo">
             <img src="images/logo.png" alt="Chamber Logo">
-            <h1>Chamber of Commerce - Business Directory</h1>
+            <h1> Manila Chamber of Commerce - Business Directory</h1>
         </div>
         <nav id="navbar">
             <ul>
