--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Metro Manila Chamber of Commerce connects businesses with opportunities, resources, and community engagement.">
     <meta name="author" content="Mar Thayne Lowell Nacionales">
-    <title>Manila Chamber of Commerce</title>
+    <title>Manila Chamber of Commerce - Business Directory</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Chamber of Commerce - Business Directory">
     <meta property="og:type" content="website">
