--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -71,7 +71,9 @@
             <h2>Business Directory</h2>
         
             <div id="members" class="card-flip-view"></div>
-        </section>    <button id="toggleDirectoryView">Toggle Directory View</button>
+        </section>    
+        <button id="view-toggle">Switch to Grid View</button>
+
     </main>
 
     <!-- FOOTER -->
