--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,12 +12,15 @@
 </head>
 <body>
     <header>
-        <h1>Business Directory</h1>
-        <nav>
+        <h1>Manila Chamber of Commerce</h1>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <nav class="nav-menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="#">Join</a></li>
+                <li><a href="#">Discover</a></li>
             </ul>
         </nav>
     </header>
