--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Manila Chamber of Commerce</h1>
+        <h1><img src="images/logo.png" alt=""> Manila Chamber of Commerce</h1>
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav class="nav-menu">
