--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Chamber of Commerce - Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/hero.jpg">
+    <meta property="og:image" content="images/logo.png">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <h1>Manila Chamber of Commerce</h1>
+        <h1><img src="images/logo.png" alt=""> Manila Chamber of Commerce</h1>
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav class="nav-menu">
