--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,6 +13,7 @@
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/chamber.js" defer></script>
 </head>
