--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Chamber of Commerce - Home">
     <meta property="og:type" content="website">
     <meta property="og:image" content="chamber/images/hero.jpg">
-    <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/">
+    <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/mobile.css">
