--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Join the Metro Manila Chamber of Commerce and access a wealth of opportunities, resources, and community engagement.">
+    <meta name="author" content="Mar Thayne Lowell Nacionales">
     <title>Membership Application</title>
-    <link rel="stylesheet" href="styles/join.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <script src="scripts/join.js" defer></script>
 </head>
+<header>
+    <h1><img src="images/logo.png" alt=""> Manila Chamber of Commerce</h1>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">&#9776;</label>
+    <nav class="nav-menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="directory.html">Directory</a></li>
+            <li><a href="join.html">Join</a></li>
+            <li><a href="discover.html">Discover</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
     <div class="container">
         <form method="get" action="thankyou.html">
