--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Chamber of Commerce - Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="chamber/images/hero.jpg">
-    <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
+    <meta property="og:image" content="http://127.0.0.1:5500/chamber/images/logo.png">
+    <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/join.html">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/mobile.css">
     <script src="scripts/weather.js" defer></script>
@@ -36,7 +36,7 @@
         <button class="hero-btn">Join Us</button>
     </section>
 
-    <main>
+    <main>     
         <div class="container">
             <section class="weather">
                 <div id="currentWeather"></div>
