--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,9 +6,14 @@
     <meta name="description" content="Join the Metro Manila Chamber of Commerce and access a wealth of opportunities, resources, and community engagement.">
     <meta name="author" content="Mar Thayne Lowell Nacionales">
     <title>Membership Application</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Chamber of Commerce - Home">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://127.0.0.1:5500/chamber/images/logo.png">
+    <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/join.html">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/mobile.css">
-    <link rel="stylesheet" href="styles/join.css"> <!-- New CSS file for additional styles -->
+    <link rel="stylesheet" href="styles/join.css"> 
     <script src="scripts/join.js" defer></script>
 </head>
 <body>
@@ -25,6 +30,10 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <h1>Join the Manila Chamber of Commerce</h1>
+        <p>Fill out the form below to become a member.</p>
+    </main>
     <div class="container">
         <form method="get" action="thankyou.html" class="application-form">
             <h2>Membership Application</h2>
