--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join the Metro Manila Chamber of Commerce and access a wealth of opportunities, resources, and community engagement.">
     <meta name="author" content="Mar Thayne Lowell Nacionales">
-    <title>Membership Application</title>
+    <title>Join the Manila Chamber of Commerce</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Chamber of Commerce - Home">
+    <meta property="og:title" content="Join the Manila Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://127.0.0.1:5500/chamber/images/logo.png">
+    <meta property="og:image" content="images/logo.png">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/join.html">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/mobile.css">
@@ -35,104 +35,52 @@
     <div class="container">
         <form method="get" action="thankyou.html" class="application-form">
             <h2>Membership Application</h2>
-            <label title="Applicant's First Name">
+            <label>
                 First Name:
-                <input type="text" name="first-name" required title="Applicant's First Name" autocomplete="given-name">
+                <input type="text" name="first-name" required>
             </label>
-            <label title="Applicant's Last Name">
+            <label>
                 Last Name:
-                <input type="text" name="last-name" required title="Applicant's Last Name" autocomplete="family-name">
+                <input type="text" name="last-name" required>
             </label>
-            <label title="Your Title in Organization">
+            <label>
                 Organizational Title:
-                <input type="text" name="organization-title" title="Your Title in Organization" autocomplete="organization-title" pattern="[A-Za-z\s\-]{7,}">
+                <input type="text" name="organization-title" pattern="[A-Za-z\s\-]{7,}">
             </label>
-            <label title="Applicant's Email">
+            <label>
                 Email:
-                <input type="email" name="email" required title="Applicant's Email" autocomplete="email" placeholder="example@example.com">
+                <input type="email" name="email" required placeholder="example@example.com">
             </label>
-            <label title="Mobile Phone Number">
+            <label>
                 Mobile Phone:
-                <input type="tel" name="phone" required title="Mobile Phone Number" autocomplete="tel">
+                <input type="tel" name="phone" required>
             </label>
-            <label title="Business/Organization Name">
+            <label>
                 Organization Name:
-                <input type="text" name="organization" required title="Business/Organization Name" autocomplete="organization">
+                <input type="text" name="organization" required>
             </label>
-            <label title="Select Membership Level">
+            <label>
                 Membership Level:
-                <select name="membership-level" title="Select Membership Level">
+                <select name="membership-level">
                     <option value="np">NP Membership (Non-Profit, No Fee)</option>
                     <option value="bronze">Bronze Membership</option>
                     <option value="silver">Silver Membership</option>
                     <option value="gold">Gold Membership</option>
                 </select>
             </label>
-            <label title="Business/Organization Description">
+            <label>
                 Organization Description:
-                <textarea name="description" title="Business/Organization Description"></textarea>
+                <textarea name="description"></textarea>
             </label>
             <input type="hidden" name="timestamp" id="timestamp">
             <input type="submit" value="Submit Application">
         </form>
-        <div class="membership-cards">
-            <div class="card" onclick="openModal('modal-np')">
-                <h3>NP Membership</h3>
-                <p>No fee for non-profits.</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card" onclick="openModal('modal-bronze')">
-                <h3>Bronze Membership</h3>
-                <p>Basic benefits included.</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card" onclick="openModal('modal-silver')">
-                <h3>Silver Membership</h3>
-                <p>More events & advertising.</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card" onclick="openModal('modal-gold')">
-                <h3>Gold Membership</h3>
-                <p>VIP benefits & discounts.</p>
-                <a href="#">Learn More</a>
-            </div>
-        </div>
-    </div>
-    <!-- Modals -->
-    <div id="modal-np" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-np')">&times;</span>
-            <h2>NP Membership</h2>
-            <p>Free membership for non-profits.</p>
-        </div>
-    </div>
-    <div id="modal-bronze" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-bronze')">&times;</span>
-            <h2>Bronze Membership</h2>
-            <p>Includes event invitations.</p>
-        </div>
-    </div>
-    <div id="modal-silver" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-silver')">&times;</span>
-            <h2>Silver Membership</h2>
-            <p>More training & exposure.</p>
-        </div>
-    </div>
-    <div id="modal-gold" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-gold')">&times;</span>
-            <h2>Gold Membership</h2>
-            <p>VIP access to all events.</p>
-        </div>
     </div>
     <footer>
         <div class="footer-container">
             <div class="footer-info">
                 <h3>Manila Chamber of Commerce</h3>
-                <p>10 Ayala Avenue</p>
-                <p>Manila, Philippines 1000</p>
+                <p>10 Ayala Avenue, Manila, Philippines 1000</p>
                 <p><a href="mailto:info@manilacc.org">info@manilacc.org</a></p>
                 <p>(+63) 555-2300</p>
             </div>
@@ -142,8 +90,7 @@
                 <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
             </div>
             <div class="footer-credit">
-                <p>WDD231 Class Project</p>
-                <p>Mar Thayne Lowell Nacionales</p>
+                <p>WDD231 Class Project - Mar Thayne Lowell Nacionales</p>
                 <p>&copy; <span id="year"></span> Manila Chamber of Commerce</p>
                 <p>Last Modified: <span id="lastModified"></span></p>
             </div>
