--- a/chamber/join.html
+++ b/chamber/join.html
@@ -13,6 +13,7 @@
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/join.html">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/mobile.css">
+    <script src="scripts/chamber.js"></script>
 </head>
 <body>
     <header>
