--- a/chamber/join.html
+++ b/chamber/join.html
@@ -30,10 +30,11 @@
         </nav>
     </header>
 
-    <main>
+    <main style="background-image: url('images/business.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; color: white; text-align: center; padding: 50px; min-height: 100px;">
         <h1>Join the Manila Chamber of Commerce</h1>
         <p>Fill out the form below to become a member.</p>
     </main>
+    
     
     <div class="container">
         <form method="get" action="thankyou.html" class="application-form">
