--- a/chamber/join.html
+++ b/chamber/join.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Chamber of Commerce - Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://127.0.0.1:5500/chamber/images/logo.png">
+    <meta property="og:image" content="https://thayl0w.github.io/wdd231/chamber/images/hero.jpg">
     <meta property="og:url" content="https://thayl0w.github.io/wdd231/chamber/join.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
     <header>
         <h1><img src="images/logo.png" alt="Manila Chamber of Commerce Logo"> Manila Chamber of Commerce</h1>
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <label for="menu-toggle" class="menu-icon" aria-label="Toggle navigation menu">&#9776;</label>
         <nav class="nav-menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -33,107 +33,48 @@
         </nav>
     </header>
 
-    <main style="background-image: url('images/business.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; color: white; text-align: center; padding: 50px; min-height: 100px;">
-        <h1>Join the Manila Chamber of Commerce</h1>
+    <main class="join-hero">
+        <h2>Join the Manila Chamber of Commerce</h2> 
         <p>Fill out the form below to become a member.</p>
     </main>
-    
-    
+
     <div class="container">
         <form method="get" action="thankyou.html" class="application-form">
             <h2>Membership Application</h2>
-            <label title="Applicant's First Name">
-                First Name:
-                <input type="text" name="first-name" required title="Applicant's First Name" autocomplete="given-name">
-            </label>
-            <label title="Applicant's Last Name">
-                Last Name:
-                <input type="text" name="last-name" required title="Applicant's Last Name" autocomplete="family-name">
-            </label>
-            <label title="Your Title in Organization">
-                Organizational Title:
-                <input type="text" name="organization-title" title="Your Title in Organization" autocomplete="organization-title" pattern="[A-Za-z\s\-]{7,}">
-            </label>
-            <label title="Applicant's Email">
-                Email:
-                <input type="email" name="email" required title="Applicant's Email" autocomplete="email" placeholder="example@example.com">
-            </label>
-            <label title="Mobile Phone Number">
-                Mobile Phone:
-                <input type="tel" name="phone" required title="Mobile Phone Number" autocomplete="tel">
-            </label>
-            <label title="Business/Organization Name">
-                Organization Name:
-                <input type="text" name="organization" required title="Business/Organization Name" autocomplete="organization">
-            </label>
-            <label title="Select Membership Level">
-                Membership Level:
-                <select name="membership-level" title="Select Membership Level">
-                    <option value="np">NP Membership (Non-Profit, No Fee)</option>
-                    <option value="bronze">Bronze Membership</option>
-                    <option value="silver">Silver Membership</option>
-                    <option value="gold">Gold Membership</option>
-                </select>
-            </label>
-            <label title="Business/Organization Description">
-                Organization Description:
-                <textarea name="description" title="Business/Organization Description"></textarea>
-            </label>
+            <label for="first-name" title="Applicant's First Name">First Name:</label>
+            <input type="text" id="first-name" name="first-name" required title="Applicant's First Name" autocomplete="given-name" aria-label="First Name">
+
+            <label for="last-name" title="Applicant's Last Name">Last Name:</label>
+            <input type="text" id="last-name" name="last-name" required title="Applicant's Last Name" autocomplete="family-name" aria-label="Last Name">
+
+            <label for="organization-title" title="Your Title in Organization">Organizational Title:</label>
+            <input type="text" id="organization-title" name="organization-title" title="Your Title in Organization" autocomplete="organization-title" pattern="[A-Za-z\s\-]{7,}" aria-label="Organizational Title">
+
+            <label for="email" title="Applicant's Email">Email:</label>
+            <input type="email" id="email" name="email" required title="Applicant's Email" autocomplete="email" placeholder="example@example.com" aria-label="Email Address">
+
+            <label for="phone" title="Mobile Phone Number">Mobile Phone:</label>
+            <input type="tel" id="phone" name="phone" required title="Mobile Phone Number" autocomplete="tel" aria-label="Mobile Phone Number">
+
+            <label for="organization" title="Business/Organization Name">Organization Name:</label>
+            <input type="text" id="organization" name="organization" required title="Business/Organization Name" autocomplete="organization" aria-label="Organization Name">
+
+            <label for="membership-level" title="Select Membership Level">Membership Level:</label>
+            <select id="membership-level" name="membership-level" title="Select Membership Level" aria-label="Membership Level">
+                <option value="np">NP Membership (Non-Profit, No Fee)</option>
+                <option value="bronze">Bronze Membership</option>
+                <option value="silver">Silver Membership</option>
+                <option value="gold">Gold Membership</option>
+            </select>
+
+            <label for="description" title="Business/Organization Description">Organization Description:</label>
+            <textarea id="description" name="description" title="Business/Organization Description" aria-label="Organization Description"></textarea>
+
             <input type="hidden" name="timestamp" id="timestamp">
             <input type="submit" value="Submit Application">
         </form>
-        <div class="membership-cards">
-            <div class="card" onclick="openModal('modal-np')">
-                <h3>NP Membership</h3>
-                <p>No fee for non-profits.</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card" onclick="openModal('modal-bronze')">
-                <h3>Bronze Membership</h3>
-                <p>Basic benefits included.</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card" onclick="openModal('modal-silver')">
-                <h3>Silver Membership</h3>
-                <p>More events & advertising.</p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card" onclick="openModal('modal-gold')">
-                <h3>Gold Membership</h3>
-                <p>VIP benefits & discounts.</p>
-                <a href="#">Learn More</a>
-            </div>
-        </div>
     </div>
-    <!-- Modals -->
-    <div id="modal-np" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-np')">&times;</span>
-            <h2>NP Membership</h2>
-            <p>Free membership for non-profits.</p>
-        </div>
-    </div>
-    <div id="modal-bronze" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-bronze')">&times;</span>
-            <h2>Bronze Membership</h2>
-            <p>Includes event invitations.</p>
-        </div>
-    </div>
-    <div id="modal-silver" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-silver')">&times;</span>
-            <h2>Silver Membership</h2>
-            <p>More training & exposure.</p>
-        </div>
-    </div>
-    <div id="modal-gold" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal-gold')">&times;</span>
-            <h2>Gold Membership</h2>
-            <p>VIP access to all events.</p>
-        </div>
-    </div>
+
     <footer>
         <div class="footer-container">
             <div class="footer-info">
@@ -144,9 +85,9 @@
                 <p>(+63) 555-2300</p>
             </div>
             <div class="footer-icons">
-                <a href="#"><img src="images/youtube.png" alt="YouTube"></a>
-                <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/youtube.png" alt="Follow us on YouTube"></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/twitter.png" alt="Follow us on Twitter"></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin.png" alt="Connect with us on LinkedIn"></a>
             </div>
             <div class="footer-credit">
                 <p>WDD231 Class Project</p>
