--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
-    <link rel="stylesheet" href="styles/thankyou.css">
+    <link rel="stylesheet" href="styles/reset.css">
 </head>
-<body>
-    <header>
-        <h1>Thank You for Your Submission!</h1>
+<body class="thankyou-page">
+    <header class="thankyou-header">
+        <h1 class="thankyou-title">Thank You for Your Submission!</h1>
     </header>
 
-    <main>
-        <h2>Here are your details:</h2>
-        <div id="submission-details" aria-live="polite"></div>
+    <main class="thankyou-main">
+        <h2 class="thankyou-subtitle">Here are your details:</h2>
+        <div id="submission-details" class="thankyou-details" aria-live="polite"></div>
     </main>
 
     <script src="scripts/thankyou.js"></script>
