--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/mobile.css">
 </head>
 <body class="thankyou-page">
     <header class="thankyou-header">
